force-app/main/default/objects/OrgError__c/fields/lkp_User__c.field-meta.xml
<CustomField>
    <fullName>lkp_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OrgErrors</relationshipName>
    <type>Lookup</type>
</CustomField>