force-app/main/default/objects/OrgError__c/fields/txt_JobId__c.field-meta.xml
<CustomField>
    <fullName>txt_JobId__c</fullName>
    <externalId>true</externalId>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>