force-app/main/default/objects/OrgError__c/fields/txt_RecordId__c.field-meta.xml
<CustomField>
    <fullName>txt_RecordId__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>