force-app/main/default/objects/OrgError__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>txt_ExceptionType__c</columns>
    <columns>txt_ApexClass__c</columns>
    <columns>dtm_RecordedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>txt_ApexClass__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Inbox</label>
</ListView>